--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Visual Studio 
+# Visual Studio
 *.suo
 *.user
 *.sln.docstates
@@ -24,6 +24,19 @@ ipch
 obj*/
 !devtools/*.mak
 !utils/smdlexp/smdlexp.mak
+*.project
+/devtools/bin/vpc_linux
+/thirdparty/gperftools-2.0/.libs/
+/thirdparty/gperftools-2.0/.deps/
+/thirdparty/gperftools-2.0/vsprojects/
+/thirdparty/gperftools-2.0/**.o
+/thirdparty/gperftools-2.0/**.lo
+/thirdparty/gperftools-2.0/**.la
+/thirdparty/gperftools-2.0/*_test
+/thirdparty/gperftools-2.0/*_unittest
+/thirdparty/gperftools-2.0/Makefile
+/thirdparty/gperftools-2.0/config.status
+/thirdparty/gperftools-2.0/libtool
 
 # Specific Source build products
 client.pdb
