--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Visual Studio
+	# Visual Studio
 *.suo
 *.user
 *.sln.docstates
@@ -36,7 +36,9 @@ obj*/
 /thirdparty/gperftools-2.0/*_unittest
 /thirdparty/gperftools-2.0/Makefile
 /thirdparty/gperftools-2.0/config.status
+/thirdparty/gperftools-2.0/src/config.h
 /thirdparty/gperftools-2.0/libtool
+/thirdparty/gperftools-2.0/configure
 
 # Specific Source build products
 client.pdb
